# watchdog

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/fetch/: mod.rs
src/update/: data.rs  git.rs  mod.rs
