[package]
name = "watchdog"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = [ "derive" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
serde_json = "1.0.73"
tempfile = "3.2.0"
curl = "0.4.41"
clap = "2.34.0"